cc_library(
    name = "unified_memory_resource",
    hdrs = ["memory/unified_memory_resource.hpp"],
    visibility = ["//visibility:public"],
    copts = ["-std=c++23"],
    deps = [],
)

cc_library(
    name = "expected",
    hdrs = ["expected.hpp"],
    deps = ["//3rd/tl:expected"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parallel",
    hdrs = ["parallel.hpp"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "snapshot",
    hdrs = ["snapshot.hpp"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "snapshot_interpolator",
    hdrs = ["snapshot_interpolator.hpp"],
    deps = [
        ":cubic_spline_solver",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "price_table_snapshot_collector",
    hdrs = ["price_table_snapshot_collector.hpp"],
    deps = [
        ":snapshot",
        ":snapshot_interpolator",
        ":american_option",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "grid",
    hdrs = ["grid.hpp"],
    deps = [
        ":expected",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "multigrid",
    hdrs = ["multigrid.hpp"],
    deps = [
        ":grid",
        ":expected",
    ],
    copts = ["-std=c++23", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "boundary_conditions",
    hdrs = ["boundary_conditions.hpp"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "jacobian_view",
    hdrs = ["jacobian_view.hpp"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "workspace",
    hdrs = ["workspace.hpp"],
    deps = [],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "root_finding",
    hdrs = ["root_finding.hpp"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "brent",
    hdrs = ["brent.hpp"],
    deps = [
        ":root_finding",
        "//common:ivcalc_trace_hdr",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "newton_workspace",
    hdrs = ["newton_workspace.hpp"],
    deps = [":workspace"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spatial_operators",
    hdrs = ["spatial_operators.hpp"],
    deps = [
        ":parallel",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-O3",
        "-march=native",      # Enable native CPU instructions (AVX-512 on modern CPUs)
        "-fopenmp-simd",      # Enable OpenMP SIMD pragmas for vectorization
        "-ftree-vectorize",   # Enable auto-vectorization
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "american_option",
    srcs = ["american_option.cpp"],
    hdrs = ["american_option.hpp"],
    deps = [
        ":parallel",
        ":pde_solver",
        ":spatial_operators",
        ":slice_solver_workspace",
        "//src/operators:operator_factory",
        "//src/operators:black_scholes_pde",
        ":expected",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-Werror",
        "-O3",
        "-march=native",      # Enable native CPU instructions (AVX-512 on modern CPUs)
        "-fopenmp-simd",      # Enable OpenMP SIMD pragmas for vectorization
        "-fopenmp",           # Enable OpenMP for batch API parallelization
        "-ftree-vectorize",   # Enable auto-vectorization
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "time_domain",
    hdrs = ["time_domain.hpp"],
    copts = ["-std=c++23", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "trbdf2_config",
    hdrs = ["trbdf2_config.hpp"],
    copts = ["-std=c++23", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "thomas_solver",
    hdrs = ["thomas_solver.hpp"],
    copts = ["-std=c++23", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cubic_spline_solver",
    hdrs = ["cubic_spline_solver.hpp"],
    deps = [":thomas_solver"],
    copts = ["-std=c++23", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_basis_1d",
    hdrs = ["bspline_basis_1d.hpp"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_collocation_1d",
    hdrs = ["bspline_collocation_1d.hpp"],
    deps = [
        ":bspline_basis_1d",
        ":bspline_utils",
        ":thomas_solver",
        ":expected",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_utils",
    hdrs = ["bspline_utils.hpp"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_4d",
    hdrs = ["bspline_4d.hpp"],
    deps = [":bspline_utils"],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",  # Enable FMA instructions
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_fitter_4d_separable",
    hdrs = ["bspline_fitter_4d_separable.hpp"],
    deps = [
        ":bspline_collocation_1d",
        ":expected",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bspline_fitter_4d",
    hdrs = ["bspline_fitter_4d.hpp"],
    deps = [
        ":bspline_4d",
        ":bspline_fitter_4d_separable",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "price_table_4d_builder",
    srcs = ["price_table_4d_builder.cpp"],
    hdrs = ["price_table_4d_builder.hpp"],
    deps = [
        ":american_option",
        ":slice_solver_workspace",
        ":bspline_4d",
        ":bspline_fitter_4d",
        ":price_table_snapshot_collector",
        ":trbdf2_config",
        ":root_finding",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "slice_solver_workspace",
    hdrs = ["slice_solver_workspace.hpp"],
    deps = [
        ":workspace",
        ":grid",
        "//src/operators:grid_spacing",
    ],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "iv_solver_interpolated",
    srcs = ["iv_solver_interpolated.cpp"],
    hdrs = ["iv_solver_interpolated.hpp"],
    deps = [
        ":bspline_4d",
        ":american_option",
        ":iv_types",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-march=native",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pde_solver",
    hdrs = ["pde_solver.hpp"],
    deps = [
        ":grid",
        ":workspace",
        ":boundary_conditions",
        ":time_domain",
        ":trbdf2_config",
        ":thomas_solver",
        ":newton_workspace",
        ":root_finding",
        ":snapshot",
        ":jacobian_view",
        ":expected",
    ],
    copts = ["-std=c++23", "-Wall", "-Wextra"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "iv_types",
    hdrs = ["iv_types.hpp"],
    copts = ["-std=c++23"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "iv_solver",
    srcs = ["iv_solver.cpp"],
    hdrs = ["iv_solver.hpp"],
    deps = [
        ":parallel",
        ":root_finding",
        ":brent",
        ":american_option",
        ":iv_types",
        "//common:ivcalc_trace_hdr",
        ":expected",
    ],
    copts = [
        "-std=c++23",
        "-Wall",
        "-Wextra",
        "-O3",
        "-fopenmp",  # Enable OpenMP for batch API parallelization
        "-DHAVE_SYSTEMTAP_SDT",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)
