# All library targets have been reorganized into subdirectories:
#
# - Core PDE solver components: //src/pde/core:BUILD.bazel
#   (grid, multigrid, boundary_conditions, jacobian_view, root_finding, brent,
#    newton_workspace, spatial_operators, time_domain, trbdf2_config, thomas_solver, pde_solver)
#
# - Interpolation utilities: //src/interpolation:BUILD.bazel
#   (cubic_spline_solver, snapshot_interpolator, bspline_4d, bspline_basis_1d,
#    bspline_fitter_4d, bspline_utils)
#
# - Pricing models: //src/option:BUILD.bazel
#   (snapshot, american_option, slice_solver_workspace, price_table_4d_builder,
#    price_table_snapshot_collector, iv_solver, iv_solver_interpolated, iv_types)
#
# - Utilities: //src/support:BUILD.bazel
#   (expected, parallel, error_types)
#
# - Memory management: //src/pde/memory:BUILD.bazel
#   (unified_memory_resource, workspace_base, pde_workspace)
#
# - Operators: //src/pde/operators:BUILD.bazel
#   (grid_spacing, operator_factory, centered_difference_facade, black_scholes_pde, etc.)
#
# - CPU features: //src/support/cpu:BUILD.bazel
#   (feature_detection)
