# All library targets have been reorganized into subdirectories:
#
# - Core PDE solver components: //src/pde/core:BUILD.bazel
#   (grid, boundary_conditions, time_domain, trbdf2_config, pde_solver)
# - Math components: //src/math:BUILD.bazel
#   (tridiagonal_matrix_view, thomas_solver, root_finding, brent, etc.)
#
# - Interpolation utilities: //src/interpolation:BUILD.bazel
#   (cubic_spline_solver, snapshot_interpolator, bspline_4d, bspline_basis_1d,
#    bspline_fitter_4d, bspline_utils)
#
# - Pricing models: //src/option:BUILD.bazel
#   (american_option, american_solver_workspace, price_table_4d_builder,
#    iv_solver, iv_solver_interpolated, iv_types)
#
# - Utilities: //src/support:BUILD.bazel
#   (expected, parallel, error_types)
#
# - Operators: //src/pde/operators:BUILD.bazel
#   (grid_spacing, operator_factory, centered_difference_facade, black_scholes_pde, etc.)
